# Lark

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  baseComponent.jsx  indexedDB.jsx  main.jsx  template.jsx  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: ability.rs  clipboard.rs  explorer.rs  file.rs  get_file_icon.js  mod.rs  proxy_pool.rs  shell.rs  system_app_name.json  tray.rs
src-tauri/src/config/: config.rs  mod.rs  plugins.rs
src-tauri/src/utils/: clipboard_file_mac.applescript  clipboard_file_win.ps1  database.rs  dirs.rs  file_factory.rs  icons.rs  img_factory.rs  json_factory.rs  mod.rs  string_factory.rs  window.rs
src-tauri/tests/: window.rs
src/components/: json.json
src/components/PrettyPostman/: info.json
src/components/json-handle/: info.json
src/panels/: clipboardComponent.jsx  settingComponent.jsx
